--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "-": "^0.0.1",
     "@hookform/resolvers": "^3.3.4",
+    "@phosphor-icons/react": "^2.0.15",
     "@types/styled-components": "^5.1.34",
     "D": "^1.0.0",
     "date-fns": "^3.3.1",
     "immer": "^10.0.3",
-    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
